--- a/webface/web/logs.html
+++ b/webface/web/logs.html
@@ -136,7 +136,7 @@
                         <a href="notifications.html"><i class="fa fa-bell fa-fw"></i> Notifications</a>
                     </li>
                     <li>
-                        <a href="logs.html"><i class="fa fa-file-text fa-fw"></i> Logs</a>
+                        <a  class="active" href="logs.html"><i class="fa fa-file-text fa-fw"></i> Logs</a>
                     </li>
                     <li>
                         <a href="charts.html"><i class="fa fa-area-chart fa-fw"></i> Summary </a>
