add level filter to charts; fix compile warnings

--- a/webface/web/charts.html
+++ b/webface/web/charts.html
@@ -172,7 +172,32 @@
                                             </span>
                             </div>
                         </div>
-
+                        <div class="form-group">
+                            <label for="tq-lowLevel" class="col-sm-3 control-label">Lower Level</label>
+                            <div class="input-group input-group-sm">
+                                <select class="form-control" id="tq-lowLevel">
+                                    <option>TRACE</option>
+                                    <option>DEBUG</option>
+                                    <option>INFO</option>
+                                    <option>WARN</option>
+                                    <option>ERROR</option>
+                                    <option>FATAL</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="tq-highLevel" class="col-sm-3 control-label">Higher Level</label>
+                            <div class="input-group input-group-sm">
+                                <select class="form-control" id="tq-highLevel">
+                                    <option>FATAL</option>
+                                    <option>ERROR</option>
+                                    <option>WARN</option>
+                                    <option>INFO</option>
+                                    <option>DEBUG</option>
+                                    <option>TRACE</option>
+                                </select>
+                            </div>
+                        </div>
                         <div class="form-group top-buffer">
                             <div class="col-sm-offset-2 col-sm-10">
                                 <button type="button" class="btn btn-primary" id="btn-load">
