--- a/webface/web/notifications.html
+++ b/webface/web/notifications.html
@@ -131,7 +131,10 @@
                         <a href="logs.html"><i class="fa fa-file-text fa-fw"></i> Logs</a>
                     </li>
                     <li>
-                        <a href="charts.html"><i class="fa fa-area-chart fa-fw"></i> Summary </a>
+                        <a href="charts.html"><i class="fa fa-area-chart fa-fw"></i> Charts </a>
+                    </li>
+                    <li>
+                        <a href="inspect.html"><i class="fa fa-bug fa-fw"></i> Inspect </a>
                     </li>
                 </ul>
             </div>
