--- a/webface/web/charts.html
+++ b/webface/web/charts.html
@@ -20,6 +20,13 @@
 
     <link href="asset/css/prma-webface.css" rel="stylesheet">
 
+    <style type="text/css">
+        #log-timeline{
+            display: block;
+            height: 100%;
+            width: 100%;
+        }
+    </style>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -132,7 +139,10 @@
                         <a href="logs.html"><i class="fa fa-file-text fa-fw"></i> Logs</a>
                     </li>
                     <li>
-                        <a  class="active" href="charts.html"><i class="fa fa-area-chart fa-fw"></i> Summary </a>
+                        <a  class="active" href="charts.html"><i class="fa fa-area-chart fa-fw"></i> Charts </a>
+                    </li>
+                    <li>
+                        <a href="inspect.html"><i class="fa fa-bug fa-fw"></i> Inspect </a>
                     </li>
                 </ul>
             </div>
@@ -144,7 +154,7 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Summary</h1>
+                <h1 class="page-header"> Charts </h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
