--- a/webface/web/inspect.html
+++ b/webface/web/inspect.html
@@ -222,7 +222,7 @@
                 <div class="col-lg-7">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            Entropys
+                            Entropy
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
